--- a/app/views/TodosController/menu.html
+++ b/app/views/TodosController/menu.html
@@ -1,8 +1,8 @@
 <div class="ui secondary inverted menu">
     <div class="active menu"></div>
     <a href="{{ path('home') }}" class="active item">Home</a>
-    <a href="{{ path('todos.new') }}" class="item">Nouvelle liste</a>
-
+    <a href="{{ path('todos.new')}}" class="item">Nouvelle liste</a>
+    <a href="{{ path('todos.save')}}" class="item">Sauvegarder liste</a>
     <div class="ui inverted toggle checkbox _multiple">
         <input type="checkbox" id="multiple">
         <label for="multiple">Saisie multiple</label>
