--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,3 +15,21 @@ body{
 	background-color: #D39D38!important;
 	color: white!important;
 }
+.title-container{
+	background-color: black;
+}
+
+.flex{
+	display: flex;
+	justify-content: start;
+}
+.banned{
+	color: white;
+	background-color: red;
+}
+
+.content{
+	display: flex;
+	justify-content: space-around;
+	background-color: white;
+}
