--- a/app/views/orga/base.html
+++ b/app/views/orga/base.html
@@ -1,3 +1,3 @@
-<div>
+<div class="title-container">
     <a href="{{path('index')}}" class="ui basic inverted button"><i class="factory icon"></i>Organisation</a>
 </div>
