--- a/app/views/orga/index.html
+++ b/app/views/orga/index.html
@@ -1,4 +1,4 @@
-
+<div class="content">
     <div>
         {% for orga in orgas%}
         <p><a  href="{{ path('orga') ~loop.index}}" >{{orga.name}}</a></p>
@@ -7,3 +7,4 @@
 
 
     </div>
+</div>
