--- a/app/views/main/vHeader.html
+++ b/app/views/main/vHeader.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-	<div class="ui container">
-		<p>Menu</p>
+	<div class="ui container" style="background-color: grey;">
+		<a href="{{path('home')}}">Menu</a>
 		<p> user</p>
 		<div><i class="shopping cart icon"></i></div>
 	</div>
