--- a/app/views/MainController/index.html
+++ b/app/views/MainController/index.html
@@ -1,1 +1,36 @@
 <!--View associated to index action of MainController controller -->
+<div class="ui grid">
+    <fieldset class="eleven wide column left floated">
+        <legend>Store</legend>
+        <a href="{{ path('order') }}" class="ui black button">Mes commandes ({{ nbOrders }})</a> <br><br>
+        <a href="{{ path('store') }}" class="fluid ui black button">Parcourir le store</a>
+    </fieldset>
+    <fieldset class="four wide column right floated">
+        <legend>Paniers</legend>
+        <a href="{{ path('newBasket') }}" class="fluid ui green button">Nouveau</a><br>
+        <a href="{{ path('basket') }}" class="fluid ui black button">Mes paniers ({{ nbBaskets }})</a>
+    </fieldset>
+    <fieldset class="sixteen wide column">
+        <legend>Promotions en cours</legend>
+        <table class="ui very basic collapsing celled table">
+            <tr>
+                {% for prod in listProm %}
+                <td>
+                    <img src="../../public/assets/img/image.jpg" alt="alternatetext" width="100" height="80">
+                    <!-- use with "../../public/assets/img/chouchou.jpg" in bdd i.e. -->
+                    <div>{{ prod.name }}</div>
+                    <strong>{{prod.price}}€</strong>
+                    <span class="ui red text"> {{ prod.promotion }}% </span>
+                </td>
+                {% endfor %}
+            </tr>
+        </table>
+    </fieldset>
+    <fieldset class="sixteen wide column">
+        <legend>Consultés récemment</legend>
+        <h5>Titre de la section</h5>
+        <div class="ui list">
+            <li>production</li>
+        </div>
+    </fieldset>
+</div>
