--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,17 +1,17 @@
-body{
-	background: rgb(79,160,174);
-	background: linear-gradient(45deg, rgba(79,160,174,1) 0%, rgba(210,157,56,1) 100%);
-}
-.head{
+.head {
 	background-color: #1f1f1f;
 }
 
-.menu.links{
-	background-color: #f8f9fa!important;
+fieldset {
+	border-radius: 10px;
+}
+
+.menu.links {
+	background-color: #f8f9fa !important;
 	padding: 10px 0;
 }
 
-.version{
-	background-color: #D39D38!important;
-	color: white!important;
+.version {
+	background-color: #d39d38 !important;
+	color: white !important;
 }
