--- a/app/views/MainController/index.html
+++ b/app/views/MainController/index.html
@@ -4,7 +4,7 @@
             <fieldset class="column">
                 <legend>Store</legend>
                 <button class="ui black button">Mes Commandes</button>
-                <button class="fluid ui black button">Parcourir le store</button>
+                <a href="{{ path('store') }}" class="fluid ui black button">Parcourir le store</a>
             </fieldset>
             <div class="column"></div>
             <fieldset class="column">
