--- a/app/views/main/vHeader.html
+++ b/app/views/main/vHeader.html
@@ -15,6 +15,6 @@
 </head>
 
 <body>
-	<a href="{{path('home')}}">Menu</a>
+	<a href="/{{path('home')}}">Menu</a>
 	{% block head %}
 	{% endblock %}
