Product part one

--- a/app/views/MainController/store.html
+++ b/app/views/MainController/store.html
@@ -13,12 +13,14 @@
                     <tr>
                         {% for prod in promo %}
                         <td>
-                            <img src="../../public/assets/img/{{prod.image}}.jpg" alt="alternatetext" width="100"
-                                height="80">
-                            <!-- use with "../../public/assets/img/chouchou.jpg" in bdd i.e. -->
-                            <div>{{ prod.name }}</div>
-                            <strong>{{prod.price}}€</strong>
-                            <span class="ui red text"> {{ prod.promotion }}% </span>
+                            <a href="/{{path('section', [prod.section])}}{{path('product', [prod.id])}}">
+                                <img src="../../public/assets/img/{{prod.image}}.jpg" alt="alternatetext" width="100"
+                                    height="80">
+
+                                <div>{{ prod.name }}</div>
+                                <strong>{{prod.price}}€</strong>
+                                <span class="ui red text"> {{ prod.promotion }}% </span>
+                            </a>
                         </td>
                         {% endfor %}
                     </tr>
