--- a/app/views/MainController/section.html
+++ b/app/views/MainController/section.html
@@ -2,7 +2,7 @@
 
     <div class="ui two column  grid">
         <div class="black column">
-            <h1>Store</h1>
+            <h1>Section</h1>
             <div class="black column">
                 {% for section in sections %}
                 <a href="/{{ path('section', [section.id]) }}">{{section.name}} ({{ section.products|length }})</a><br>
@@ -17,7 +17,7 @@
                 <div class="ui equal width center aligned padded grid">
                     {% for prod in product %}
                     <div class="four wide column">
-                        <a href="{{ path('product', [section.id, prod.id]) }}">
+                        <a href="{{ path('product', [prod.id]) }}">
                             <img src="/public/assets/img/{{ prod.image }}.jpg" alt="alternatetext" width="100"
                                 height="80">
                             <div>{{ prod.name }}</div>
