--- a/app/views/MainController/index.html
+++ b/app/views/MainController/index.html
@@ -18,13 +18,15 @@
             <table class="ui very basic collapsing celled table">
                 <tr>
                     {% for prod in promo %}
-                    <td>
+                    <a href="/{{ path('product', [prod.section, prod.id]) }}">
+
                         <img src="../../public/assets/img/{{prod.image}}.jpg" alt="alternatetext" width="100"
                             height="80">
                         <!-- use with "../../public/assets/img/chouchou.jpg" in bdd i.e. -->
                         <div>{{ prod.name }}</div>
                         <strong>{{prod.price}}€</strong>
                         <span class="ui red text"> {{ prod.promotion }}% </span>
+                    </a>
                     </td>
                     {% endfor %}
                 </tr>
