--- a/app/views/MainController/section.html
+++ b/app/views/MainController/section.html
@@ -17,7 +17,8 @@
                 <div class="ui equal width center aligned padded grid">
                     {% for prod in product %}
                     <div class="four wide column">
-                        <a href="{{ path('product', [prod.id]) }}">
+                        <a href="/{{ path('product', [section.id, prod.id]) }}">
+
                             <img src="/public/assets/img/{{ prod.image }}.jpg" alt="alternatetext" width="100"
                                 height="80">
                             <div>{{ prod.name }}</div>
