--- a/app/views/MainController/section.html
+++ b/app/views/MainController/section.html
@@ -21,14 +21,13 @@
 
                             <img src="/public/assets/img/{{ prod.image }}.jpg" alt="alternatetext" width="100"
                                 height="80">
-                            <div>{{ prod.name }}</div>
+                            <span class="ui black text">{{ prod.name }}</span>
                             <strong>{{prod.price}}€</strong>
-                            <a href="{{ path('defaultBasket', [article.id]) }}"
-                                class="ui circular mini icon inverted button right floated"><i
-                                    class="shopping cart icon"></i></a>
+                            <a href="{{path('addBasket',[prod.id,1])}}"><i class="shopping cart icon"></i></a>
+
+
                             <div class="ui label">{{ prod.comments }}</div>
-                            <button class="ui circular mini icon inverted button right floated"><i
-                                    class="tasks icon"></i></button>
+
                         </a>
                     </div>
                     {% endfor %}
